welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: reassignment to val
	while(vacation=false){
                      ^sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
	while(vacation=false){
        ^